[gd_scene load_steps=5 format=3 uid="uid://c7tjpk3vvjvc"]

[ext_resource type="SpriteFrames" uid="uid://cd7tnke72ie67" path="res://scenes/entities/door_frames.tres" id="1_htbgl"]
[ext_resource type="Script" uid="uid://cn181y53klec6" path="res://scenes/entities/door_interactable.gd" id="2_ewl7v"]
[ext_resource type="Script" uid="uid://bfs7swpjpps1h" path="res://scripts/dungeon/door.gd" id="2_htbgl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dn7cs"]
size = Vector2(16, 16)

[node name="Door" type="AnimatedSprite2D"]
sprite_frames = ExtResource("1_htbgl")
animation = &"open"
script = ExtResource("2_htbgl")

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("2_ewl7v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_dn7cs")

[connection signal="input_event" from="Area2D" to="Area2D" method="_on_input_event"]
[connection signal="mouse_shape_entered" from="Area2D" to="Area2D" method="_on_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="Area2D" to="Area2D" method="_on_mouse_shape_exited"]
